--- a/testing/svm_vr.ipynb
+++ b/testing/svm_vr.ipynb
@@ -33,18 +33,18 @@
     "\n",
     "(DONE)* SVM VR         - Preprocessing \n",
     "\n",
-    "(STARTING)* DBSMOTE        - Preprocessing\n",
+    "(STARTING)* DBSMOTE IN R      - Preprocessing\n",
     "\n",
     "\n",
     "- Manaus\n",
-    "(DOING)* HDDT Emsemble  - Algorítimico\n",
-    "(DOING)* WHMBoost       - Cost Sensitivity\n",
-    "* CHMDT          - Cost Sensitivity \n",
-    "* CCR            - Preprocessing\n",
-    "* EHSO           - Preprocessing\n",
+    "(CANCELED)* HDDT Emsemble  - Algorítimico\n",
+    "(CANCELED)* WHMBoost       - Cost Sensitivity\n",
+    "(CANCELED)* CHMDT          - Cost Sensitivity \n",
+    "(CANCELED)* CCR            - Preprocessing\n",
+    "(DOING)* EHSO           - Preprocessing\n",
     "\n",
     "(DONE) * EasyEmsemble   - Algorítimico\n",
-    "* Método novo    - Algorítimico"
+    "(DOING)* Método novo    - Algorítimico"
    ]
   },
   {
@@ -166,9 +166,10 @@
     "print(kwargs)\n",
     "\n",
     "best_SVM = SVC(random_state=32,**kwargs).fit(X_train_scaled,y_train)\n",
+    "y_train2= best_SVM.predict(X_train_scaled)\n",
     "X_testz = scaler.inverse_transform(X_train_scaled)\n",
     "new_train = pd.DataFrame(X_testz,columns=X_.columns)\n",
-    "nem_train['y'] = y_train2"
+    "new_train['y'] = y_train2"
    ]
   },
   {
@@ -193,7 +194,7 @@
     "        import skopt\n",
     "        from skopt import BayesSearchCV\n",
     "\n",
-    "    def svm_vr(Y,df,random_state=32):\n",
+    "    def svm_vr(Y,df,random_state=42):\n",
     "        \"\"\" This function fits a SVM Classifier, taking the best result from the grid searching.\n",
     "        After the best fit has been achieved, the training dependent variable values must be replaced by the predicts of the trained model, thus obtaining the balancing.\n",
     "\n",
@@ -210,17 +211,18 @@
     "        Based on the ideia by the authors, we select the best model, by the value of accuracy\n",
     "        \"\"\"\n",
     "        # Setting the X and y\n",
-    "        X = df.drop(Y, axis=1)\n",
+    "        X_ = df.drop(Y, axis=1)\n",
     "        y = df[[Y]]\n",
     "\n",
-    "        X = X.\n",
+    "        X = np.asarray(X_)\n",
+    "        y = np.asarray(y).ravel()\n",
     "\n",
     "        # Split the data\n",
     "        X_train, x_test,\n",
     "        y_train, y_test = train_test_split(X,y, test_size=0.33, random_state=random_state)\n",
     "\n",
     "        SVM_vr_search = BayesSearchCV(\n",
-    "            SVC(),\n",
+    "            SVC(random_state=random_state),\n",
     "            {\n",
     "                'C': Integer(5,10),\n",
     "                'gamma': Integer(5,10),\n",
@@ -228,7 +230,7 @@
     "                'kernel': Categorical(['linear', 'poly', 'rbf','sigmoid'])\n",
     "            },\n",
     "            n_iter=32,\n",
-    "            random_state=32,\n",
+    "            random_state=random_state,\n",
     "            cv=5,\n",
     "            scoring='accuracy',\n",
     "            return_train_score=True\n",
@@ -258,14 +260,40 @@
     "        kwargs = params.params\n",
     "        print(kwargs)\n",
     "\n",
-    "        best_SVM = SVC(random_state=32,**kwargs).fit(X)\n",
+    "        best_SVM = SVC(random_state=random_state,**kwargs).fit(X)\n",
     "        y_train2= best_SVM.predict(X_train_scaled)\n",
     "        X_trainz = scaler.inverse_transform(X_train_scaled)\n",
     "        new_train = pd.DataFrame(X_trainz,columns=X_.columns)\n",
     "        new_train['y'] = y_train2 ; new_train\n",
-    "        \n",
-    "        \n",
-    "\n"
+    "\n",
+    "        return..."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generalizar as variavéis caso apareça no X variáveis categoricas\n",
+    "# Entender o pipe do Manaus - Para esse tipo de variáveis."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SMOTE\n",
+    "\n",
+    "# Treino Teste a Val.\n",
+    "\n",
+    "- Preprocesso Treino\n",
+    "- Teste para hiperparâmetro.\n",
+    "- Validação checo a performance do modelo\n",
+    "\n",
+    "\n",
+    "# Adicionar o fit_params no BayesSearchCV\n",
+    "# Adicionar o RF classifier (Predict e validação final) sem Tunning"
    ]
   }
  ],
