commiting_svm_alterations

--- a/testing/svm_vr.ipynb
+++ b/testing/svm_vr.ipynb
@@ -16,6 +16,18 @@
     "sys.path.insert(0, os.path.abspath(\"..\"))\n",
     "from utilidades.calibration import utilities as ult\n",
     "\n",
+    "import sklearn as sk\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import seaborn as sns\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import optuna \n",
+    "from optuna.samplers import TPESampler\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "import time\n",
+    "import skopt\n",
+    "from skopt import BayesSearchCV\n",
+    "\n",
     "import sklearn.pipeline"
    ]
   },
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,6 +77,25 @@
    ],
    "source": [
     "df = pd.read_csv('breast-cancer.csv') ; print(df.shape,df.select_dtypes('object').value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_cols = df.select_dtypes(include=[float, int]).columns\n",
+    "\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "if num_cols.values.shape[0] > 0:\n",
+    "            pipe_num = Pipeline(\n",
+    "            steps = [\n",
+    "                (\"selector_num\", ColumnTransformer([(\"selector\", \"passthrough\", num_cols.values)], remainder = 'drop')),\n",
+    "                ('num_imputer', SimpleImputer(strategy='mean'))])"
    ]
   },
   {
@@ -123,6 +154,7 @@
     "from skopt.space import Real, Categorical, Integer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
+    "\n",
     "X_ = df.drop('diagnosis', axis=1)\n",
     "y = df[['diagnosis']]\n",
     "\n",
@@ -174,27 +206,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\vinic\\Documents\\Projetos\\TCC\\utilidades\\calibration.py:32: FutureWarning: The pandas.datetime class is deprecated and will be removed from pandas in a future version. Import from datetime module instead.\n",
+      "  cat_cols = dataframe.select_dtypes(include=[object, pd.datetime]).columns\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[9.1138460e+06, 1.2270000e+01, 2.9970000e+01, ..., 0.0000000e+00,\n",
+       "        2.4090000e-01, 6.7430000e-02],\n",
+       "       [8.6159800e+05, 1.4640000e+01, 1.5240000e+01, ..., 1.3970000e-01,\n",
+       "        3.1510000e-01, 8.4730000e-02],\n",
+       "       [9.2695400e+05, 1.6600000e+01, 2.8080000e+01, ..., 1.4180000e-01,\n",
+       "        2.2180000e-01, 7.8200000e-02],\n",
+       "       ...,\n",
+       "       [9.1132390e+06, 1.3240000e+01, 2.0130000e+01, ..., 1.3570000e-01,\n",
+       "        2.8450000e-01, 1.2490000e-01],\n",
+       "       [8.9742801e+07, 1.7060000e+01, 2.1000000e+01, ..., 1.8270000e-01,\n",
+       "        2.6230000e-01, 7.5990000e-02],\n",
+       "       [8.9382602e+07, 1.2760000e+01, 1.3370000e+01, ..., 8.4110000e-02,\n",
+       "        2.5640000e-01, 8.2530000e-02]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import skopt\n",
+    "from skopt import BayesSearchCV\n",
+    "from skopt.space import Real, Categorical, Integer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import FunctionTransformer\n",
+    "\n",
+    "X,y = ult.splitxy(df,'diagnosis')\n",
+    "X_train, y_train, X_test, y_test, X_val, y_val = ult.train_test_val(X,y)\n",
+    "\n",
+    "prep_feat_tuple = ult.create_prep_pipe(df,'diagnosis')\n",
+    "prep_feat = prep_feat_tuple[0]\n",
+    "\n",
+    "lists_pandarizer = list(prep_feat_tuple[1]) + list(prep_feat_tuple[2])\n",
+    "\n",
+    "pipe_prep = Pipeline([\n",
+    "            ('transformer_prep', prep_feat),\n",
+    "            (\"pandarizer\", FunctionTransformer(lambda x: pd.DataFrame(x, columns = lists_pandarizer))),\n",
+    "        ])\n",
+    "pipe_prep.fit(X_train)\n",
+    "\n",
+    "X_train = np.asarray(X_train) ; X_train\n",
+    "\n",
+    "# X_ = df.drop('diagnosis', axis=1)\n",
+    "# y = df[['diagnosis']]\n",
+    "\n",
+    "# X = np.asarray(X_)\n",
+    "# y = np.asarray(y).ravel()\n",
+    "\n",
+    "# X_train, x_test, y_train, y_test = train_test_split(X,y, test_size=0.33, random_state=32,stratify=y)\n",
+    "\n",
+    "# scaler = StandardScaler()\n",
+    "# X_train_scaled = scaler.fit_transform(X_train)\n",
+    "\n",
+    "\n",
+    "# SVM_vr_search = BayesSearchCV(\n",
+    "#     SVC(),\n",
+    "#     {\n",
+    "#         'C': Integer(5,10),\n",
+    "#         'gamma': Integer(5,10),\n",
+    "#         'degree': Integer(1,8),\n",
+    "#         'kernel': Categorical(['linear', 'poly', 'rbf','sigmoid'])\n",
+    "#     },\n",
+    "#      n_iter=32,\n",
+    "#      random_state=32,\n",
+    "#      cv=5,\n",
+    "#      scoring='accuracy',\n",
+    "#      return_train_score=True\n",
+    "# )\n",
+    "\n",
+    "# SVM_vr_search.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# X_test_scaled = scaler.transform(x_test)\n",
+    "# print(SVM_vr_search.score(X_test_scaled, y_test))\n",
+    "\n",
+    "# results_cv = pd.DataFrame(SVM_vr_search.cv_results_)\n",
+    "\n",
+    "# temp = results_cv[['mean_train_score', 'mean_test_score']]\n",
+    "# temp['diff'] = temp['mean_test_score'] - temp['mean_train_score']\n",
+    "# to_go = temp[abs(temp['diff']) < 0.05].sort_values(by = 'mean_test_score', ascending = False).head(1).index\n",
+    "\n",
+    "# params = results_cv.loc[to_go.values[0]]\n",
+    "# kwargs = params.params\n",
+    "# print(kwargs)\n",
+    "\n",
+    "# best_SVM = SVC(random_state=32,**kwargs).fit(X_train_scaled,y_train)\n",
+    "# y_train2= best_SVM.predict(X_train_scaled)\n",
+    "# X_testz = scaler.inverse_transform(X_train_scaled)\n",
+    "# new_train = pd.DataFrame(X_testz,columns=X_.columns)\n",
+    "# new_train['y'] = y_train2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "class svm_vr():\n",
-    "    def __init__(self):\n",
+    "    def __init__(self,self, dataframe : pd.DataFrame, target: str,metric : str = 'accuracy', pipe_final : sklearn.pipeline = None):\n",
+    "        self.dataframe = dataframe\n",
+    "        self.target = target\n",
+    "        self.metric = metric\n",
+    "        self._pipe_final = pipe_final\n",
     "\n",
-    "        # Importing packages.\n",
-    "        import sklearn as sk\n",
-    "        from sklearn.svm import SVC\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "        import seaborn as sns\n",
-    "        from sklearn.model_selection import GridSearchCV\n",
-    "        import optuna \n",
-    "        from optuna.samplers import TPESampler\n",
-    "        from sklearn.model_selection import cross_val_score\n",
-    "        import time\n",
-    "        import skopt\n",
-    "        from skopt import BayesSearchCV\n",
     "\n",
-    "    def svm_vr(Y,df,random_state=42):\n",
+    "    def svm_vr(random_state=42):\n",
     "        \"\"\" This function fits a SVM Classifier, taking the best result from the grid searching.\n",
     "        After the best fit has been achieved, the training dependent variable values must be replaced by the predicts of the trained model, thus obtaining the balancing.\n",
     "\n",
@@ -211,18 +343,45 @@
     "        Based on the ideia by the authors, we select the best model, by the value of accuracy\n",
     "        \"\"\"\n",
     "        # Setting the X and y\n",
-    "        X_ = df.drop(Y, axis=1)\n",
-    "        y = df[[Y]]\n",
+    "        X,y = ult.splitxy(self.dataframe,self.target)\n",
+    "        X_train, y_train, X_test, y_test, X_val, y_val = ult.train_test_val(X,y)\n",
     "\n",
-    "        X = np.asarray(X_)\n",
-    "        y = np.asarray(y).ravel()\n",
+    "        prep_feat_tuple = ult.create_prep_pipe(self.dataframe,self.target)\n",
+    "        prep_feat = prep_feat_tuple[0]\n",
     "\n",
-    "        # Split the data\n",
-    "        X_train, x_test,\n",
-    "        y_train, y_test = train_test_split(X,y, test_size=0.33, random_state=random_state)\n",
+    "        lists_pandarizer = list(prep_feat_tuple[1]) + list(prep_feat_tuple[2])\n",
+    "\n",
+    "        pipe_prep = Pipeline([\n",
+    "                    ('transformer_prep', prep_feat),\n",
+    "                    (\"pandarizer\", FunctionTransformer(lambda x: pd.DataFrame(x, columns = lists_pandarizer))),\n",
+    "                ])\n",
+    "        pipe_prep.fit(X_train)\n",
+    "\n",
+    "        X_train = np.asarray(X_train)\n",
+    "        y_train = np.asarray(y_train).ravel()\n",
+    "\n",
+    "        metric = self.metric\n",
+    "\n",
+    "        RF_estimator = RandomForestClassifier(random_state= 42)\n",
+    "\n",
+    "        # X_ = df.drop(Y, axis=1)\n",
+    "        # y = df[[Y]]\n",
+    "\n",
+    "        # X = np.asarray(X_)\n",
+    "        # y = np.asarray(y).ravel()\n",
+    "\n",
+    "        # # Split the data\n",
+    "        # X_train, x_test,\n",
+    "        # y_train, y_test = train_test_split(X,y, test_size=0.33, random_state=random_state)\n",
+    "\n",
+    "        fit_params = {\n",
+    "            'eval_metric': metric, \n",
+    "            'eval_set': [(X_test, pd.DataFrame(y_test))],\n",
+    "            'callbacks': [(early_stopping(stopping_rounds = 10, verbose = True))],\n",
+    "        }    \n",
     "\n",
     "        SVM_vr_search = BayesSearchCV(\n",
-    "            SVC(random_state=random_state),\n",
+    "            SVC(random_state=42),\n",
     "            {\n",
     "                'C': Integer(5,10),\n",
     "                'gamma': Integer(5,10),\n",
@@ -230,14 +389,13 @@
     "                'kernel': Categorical(['linear', 'poly', 'rbf','sigmoid'])\n",
     "            },\n",
     "            n_iter=32,\n",
-    "            random_state=random_state,\n",
+    "            random_state=42,\n",
     "            cv=5,\n",
-    "            scoring='accuracy',\n",
-    "            return_train_score=True\n",
+    "            scoring=metric,\n",
+    "            return_train_score=True,\n",
+    "            fit_params = fit_params\n",
     "        )\n",
-    "        try:\n",
-    "            \n",
-    "            SVM_vr_search.fit(X_train, y_train)\n",
+    "        SVM_vr_search.fit(X_train, y_train)\n",
     "            \n",
     "        except ValueError:\n",
     "\n",
@@ -274,8 +432,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generalizar as variavéis caso apareça no X variáveis categoricas\n",
-    "# Entender o pipe do Manaus - Para esse tipo de variáveis."
+    "#### Generalizar as variavéis caso apareça no X variáveis categoricas CHECK\n",
+    "#### Entender o pipe do Manaus - Para esse tipo de variáveis. CHECK"
    ]
   },
   {
@@ -283,18 +441,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SMOTE\n",
+    "#### SMOTE\n",
     "\n",
-    "# Treino Teste a Val.\n",
+    "#### Treino Teste a Val. CHECK\n",
     "\n",
-    "- Preprocesso Treino\n",
+    "- Preprocesso Treino \n",
     "- Teste para hiperparâmetro.\n",
     "- Validação checo a performance do modelo\n",
     "\n",
     "\n",
-    "# Adicionar o fit_params no BayesSearchCV\n",
-    "# Adicionar o RF classifier (Predict e validação final) sem Tunning"
+    "#### Adicionar o fit_params no BayesSearchCV\n",
+    "#### Adicionar o RF classifier (Predict e validação final) sem Tunning CHECK"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
